<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/buttonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/zeroButton"
            style="@style/Wrapped"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/oneButton"
            style="@style/Wrapped"
            android:text="@string/one" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/twoButton"
            style="@style/Wrapped"
            android:text="@string/two" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/threeButton"
            style="@style/Wrapped"
            android:text="@string/three" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fourButton"
            style="@style/Wrapped"
            android:text="@string/four" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/fiveButton"
            style="@style/Wrapped"
            android:text="@string/five" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sixButton"
            style="@style/Wrapped"
            android:text="@string/six" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/sevenButton"
            style="@style/Wrapped"
            android:text="@string/seven" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/eightButton"
            style="@style/Wrapped"
            android:text="@string/eight" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/nineButton"
            style="@style/Wrapped"
            android:text="@string/nine" />

    </RadioGroup>

</HorizontalScrollView>
