<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calcSingleOperationRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/tab_activity_top_padding">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainText"
            style="@style/SelectedNumber"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/calc_button"
            android:paddingHorizontal="10dp"
            android:scrollbars="vertical"
            android:textColor="?colorOnPrimary" />

        <Button
            android:id="@+id/clearButton"
            style="@style/CalculatorButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/clear_cd"
            android:text="@string/clear"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        app:layout_constraintVertical_bias="0">

        <GridLayout
            android:id="@+id/numpadLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:columnCount="4"
            android:rowCount="4"
            android:useDefaultMargins="false" >

            <Button
                android:id="@+id/oneButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/one" />

            <Button
                android:id="@+id/twoButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/three" />

            <Button
                android:id="@+id/fourButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/six" />

            <Button
                android:id="@+id/sevenButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/nine" />

            <Button
                android:id="@+id/zeroButton"
                style="@style/CalculatorButton.Numpad"
                android:layout_row="3"
                android:layout_column="2"
                android:text="@string/zero" />

            <ImageButton
                android:id="@+id/plusButton"
                style="@style/CalculatorButton.Image.Numpad"
                android:layout_row="0"
                android:layout_column="3"
                android:contentDescription="@string/plus_cd"
                android:src="@drawable/ic_plus"
                app:tint="?colorOnPrimary" />

            <ImageButton
                android:id="@+id/minusButton"
                style="@style/CalculatorButton.Image.Numpad"
                android:layout_row="1"
                android:layout_column="3"
                android:contentDescription="@string/minus_cd"
                android:src="@drawable/ic_minus"
                app:tint="?colorOnPrimary" />

            <ImageButton
                android:id="@+id/timesButton"
                style="@style/CalculatorButton.Image.Numpad"
                android:layout_row="2"
                android:layout_column="3"
                android:contentDescription="@string/times_cd"
                android:src="@drawable/ic_times"
                app:tint="?colorOnPrimary" />

            <ImageButton
                android:id="@+id/divideButton"
                style="@style/CalculatorButton.Image.Numpad"
                android:layout_row="3"
                android:layout_column="3"
                android:contentDescription="@string/divide_cd"
                android:src="@drawable/ic_divide"
                app:tint="?colorOnPrimary" />

        </GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
