<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/tab_activity_top_padding">

<!--    <include-->
<!--        android:id="@+id/settingsButton"-->
<!--        layout="@layout/component_settings_button" />-->

    <TextView
        android:id="@+id/mainText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/calc_button"
        android:paddingHorizontal="10dp"
        android:scrollbars="vertical"
        android:textColor="?colorOnPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/topButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/mainText"
        app:layout_constraintTop_toBottomOf="@id/mainText">

        <Button
            android:id="@+id/clearButton"
            style="@style/CalculatorButton"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/clear"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/equalsButton"
            style="@style/CalculatorButton.Image"
            android:contentDescription="@string/equals_cd"
            android:src="@drawable/ic_equals"
            app:tint="?colorOnPrimary" />

        <ImageButton
            android:id="@+id/saveButton"
            style="@style/CalculatorButton.Image"
            android:contentDescription="@string/store_cd"
            android:src="@drawable/ic_download"
            android:visibility="gone"
            app:tint="?colorOnPrimary" />

    </LinearLayout>

    <!-- Start margin balances the end margin on the last child view -->
    <LinearLayout
        android:id="@+id/savedNumbersLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topButtonsLayout">

        <include
            android:id="@+id/savedValueText1"
            layout="@layout/component_calc_saved_value" />

        <include
            android:id="@+id/savedValueText2"
            layout="@layout/component_calc_saved_value" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        style="@style/FullWidthLinearLayout"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/savedNumbersLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/oneButton"
            style="@style/CalculatorButton"
            android:text="@string/one" />

        <ImageButton
            android:id="@+id/plusButton"
            style="@style/CalculatorButton"
            android:contentDescription="@string/plus_cd"
            android:src="@drawable/ic_plus"
            app:tint="?colorOnPrimary" />

        <ImageButton
            android:id="@+id/minusButton"
            style="@style/CalculatorButton"
            android:contentDescription="@string/minus_cd"
            android:src="@drawable/ic_minus"
            app:tint="?colorOnPrimary" />


        <ImageButton
            android:id="@+id/backspaceButton"
            style="@style/CalculatorButton.Image"
            android:contentDescription="@string/backspace_cd"
            android:src="@drawable/ic_arrow_left"
            app:tint="?colorOnPrimary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
