<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/tab_activity_top_padding">

<!--    <include-->
<!--        android:id="@+id/settingsButton"-->
<!--        layout="@layout/component_settings_button" />-->

    <include
        android:id="@+id/dateNumbersLayout"
        layout="@layout/component_date_numbers" />

    <xyz.lbres.customview.circlelayout.SingleChildCircleLayout
        android:id="@+id/yearsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:childLayout="@layout/component_date_circle_button"
        app:layout_constraintBottom_toTopOf="@id/changeYearsLabel"
        app:layout_constraintTop_toBottomOf="@id/dateNumbersLayout"
        app:numChildren="@integer/yearsCircleNumChildren" />

    <xyz.lbres.customview.circlelayout.SingleChildCircleLayout
        android:id="@+id/daysLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:childLayout="@layout/component_date_circle_button"
        app:layout_constraintBottom_toTopOf="@id/changeYearsLabel"
        app:layout_constraintTop_toBottomOf="@id/dateNumbersLayout"
        app:numChildren="@integer/daysCircleNumChildren"
        app:radiusMode="percent"
        app:radiusPercent="0.5" />

    <xyz.lbres.customview.circlelayout.SingleChildCircleLayout
        android:id="@+id/monthsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:childLayout="@layout/component_date_circle_button"
        app:layout_constraintBottom_toTopOf="@id/changeYearsLabel"
        app:layout_constraintTop_toBottomOf="@id/dateNumbersLayout"
        app:numChildren="@integer/monthsCircleNumChildren"
        app:radiusMode="percent"
        app:radiusPercent="0.2" />

    <!-- Controls for changing available years -->
    <TextView
        android:id="@+id/changeYearsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/change_available_years"
        android:textColor="?colorOnBackground"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/changeYearsButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/changeYearsButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/decrementYearsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:contentDescription="@string/minus_cd"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_minus_circle"
            app:tint="?colorOnBackground"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/incrementYearsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:contentDescription="@string/plus_cd"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_plus_circle"
            app:tint="?colorOnBackground"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
